<resources>
    <string name="app_name">Messanger Uniparthenope</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="login_button_text">Login</string>
    <string name="user_not_logged">User not logged in</string>
    <string name="logout_button_text">Logout</string>

    <string name="shared_preferences_auth_file">it.uniparthenope.studenti.francescobottino001.messangeruniparthenope.auth</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="errore_non_specificato">Errore non specificato</string>
</resources>
